<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.fragments.DueDateResultFragment">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/top_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_marginBottom="@dimen/_75sdp"
        android:id="@+id/imageView4"
        android:layout_width="@dimen/_215sdp"
        android:layout_height="@dimen/_215sdp"
        android:src="@drawable/result_screen_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/heart" />

        <TextView
            android:id="@+id/first_txt"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/urbanist"
            android:text="@string/this_means_you_are_6_weeks"
            android:textColor="@color/gray_text_color"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/first_txt_week"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart= "@dimen/_5sdp"
            android:textStyle="bold"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/_6_weeks"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/urbanist"
            android:textColor="@color/gray_text_color"
            android:text="@string/pregnant_have_34_weeks_to_go"
            android:textSize="@dimen/_13sdp" />
        <TextView
            android:id="@+id/remaining_weeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorDark"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/_34_weeks_to_go"
            android:textSize="@dimen/_13sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/urbanist"
            android:textColor="@color/gray_text_color"
            android:text="@string/to_go"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/urbanist"
        android:text="Your child is effectivelly farming and creating"
        android:textColor="@color/gray_text_color"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/urbanist_medium"
            android:text="Continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>